Record cold-code retention failure and warmed Map allocation